ATS-22 fix: corrige erros